# affex_win

./: .gitignore  LICENSE  Makefile  README.md  prediction_results_summary.csv  pyproject.toml
analysis/length_mae/: length_mae_observations.csv  length_mae_statistics.csv
configs/: train.yaml
configs/experiment/: pcann_reimpl-esm2-paired-bidir-mc10.yaml  pcann_reimpl-esm2-paired-linker-bidir-mc10.yaml  pcann_reimpl-esm2-paired-linker-interface-mc10.yaml  pcann_reimpl-esm2-paired-linker-mc10.yaml  pcann_reimpl-esm2-paired-lora-mc10.yaml  pcann_reimpl-esm2-paired-mc10.yaml  pcann_reimpl-esm2-paired-tail-mc10.yaml  pcann_reimpl-mc10.yaml  pcann_reimpl-plm-interact-mc10.yaml
configs/folds/: fold_0.yaml  fold_1.yaml  fold_2.yaml  fold_3.yaml  fold_4.yaml  fold_5.yaml  fold_6.yaml  fold_7.yaml  fold_8.yaml  fold_9.yaml
configs/lightning/: edgepool.yaml
data/: README.md  membrane_proteins.csv
data/test/: test-fabs.csv  testAB-clean.csv
data/train/: folds_pcann_plus_ppisplit_mc25.csv  pcann-plus-trainval.csv
docs/: data-prep.md  inference.md  training.md
scripts/: analyze_length_mae.py  summarize_predictions.py  test_release.sh
scripts/data/: find_membrane_proteins.py  run_esm_extraction.py  run_esm_extraction_inprocess.py  run_esm_tail_cache_extraction.py  run_plm_interact_extraction.py
src/: predict.py  train.py
src/affex/data/: constants.py  datamodule.py  esm2.py  measurement.py  plm_interact.py  ppb_dataset.py  types.py
src/affex/data/transform/: __init__.py  graph_builder.py
src/affex/model/: esm_lora_pcann.py  esm_tail_pcann.py  lightning.py  pcann.py
src/affex/utils/: memory_monitor.py  save_predictions.py
